--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -5,7 +5,7 @@
 	"manifest_version": 2,
     "permissions": ["https://*/*","activeTab","tabs"],
     "content_scripts": [{
-        "matches": ["https://www.quora.com/*"],
+        "matches": ["https://*.quora.com/*"],
         "css": ["style.css"],
         "all_frames": true,
         "run_at": "document_start"
